--- a/index.html
+++ b/index.html
@@ -9,6 +9,21 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <div class="container">
+            <div class="navbar">
+                <img src="./images/logo.png" alt="logo" class="logo">
+                <nav>
+                    <ul>
+                        <li><a href="">Controllers</a></li>
+                        <li><a href="">Accessories</a></li>
+                        <li><a href="">Remotes</a></li>
+                        <li><a href="">Others</a></li>
+                    </ul>
+                </nav>
+                <img src="./images/menu.png" alt="menu" class="menu-icon">
+            </div>
+        </div>
+    </header>
 </body>
 </html>
