--- a/index.html
+++ b/index.html
@@ -23,6 +23,17 @@
                 </nav>
                 <img src="./images/menu.png" alt="menu" class="menu-icon">
             </div>
+
+            <div class="row">
+                <div class="col-1">
+                    <h2>PS4 V3<br>Dualshock 4</h2>
+                    <h3>Wireless Controller for Playstation 4</h3>
+                    <p>(Compatible/Generic)</p>
+                    <h4>$30.99</h4>
+                    <button>Buy Now<img src="./images/arrow.png"></button>
+                </div>
+                <div class="col-2"></div>
+            </div>
         </div>
     </header>
 </body>
