--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
                     <h4>$30.99</h4>
                     <button>Buy Now<img src="./images/arrow.png"></button>
                 </div>
-                <div class="col-2"></div>
+                <div class="col-2">
+                    <img src="./images/controller.png" alt="controller" class="controller">
+                    <div class="color-box"></div>
+                </div>
             </div>
         </div>
     </header>
