--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
             <div class="navbar">
                 <img src="./images/logo.png" alt="logo" class="logo">
                 <nav>
-                    <ul>
+                    <ul id="menuList">
                         <li><a href="">Controllers</a></li>
                         <li><a href="">Accessories</a></li>
                         <li><a href="">Remotes</a></li>
                         <li><a href="">Others</a></li>
                     </ul>
                 </nav>
-                <img src="./images/menu.png" alt="menu" class="menu-icon">
+                <img src="./images/menu.png" alt="menu" class="menu-icon" onclick="togglemenu()">
             </div>
 
             <div class="row">
@@ -35,9 +35,21 @@
                 <div class="col-2">
                     <img src="./images/controller.png" alt="controller" class="controller">
                     <div class="color-box"></div>
+                    <div class="add-btn">
+                        <img src="./images/add.png" alt="">
+                        <p><small>Add to Cart</small></p>
+                    </div>
                 </div>
+            </div>
+
+            <div class="social-links">
+                <img src="./images/fb.png" alt="">
+                <img src="./images/tw.png" alt="">
+                <img src="./images/ig.png" alt="">
             </div>
         </div>
     </header>
+
+    <script src="./main.js"></script>
 </body>
 </html>
